chore(warnings): zero JDT/PDE warnings (112 -> 0)
- BREE org.moreunit.core.test JavaSE-11 -> 21
- rawtypes/unchecked fixes (TypeRef, TypeUse, BaseTools, MoreUnitAnnotationModel)
- deprecated URL -> URI, getContextType suppression minimale
- unused locals/fields nettoyes, javadoc completee
- restriction: suppressions white-box tests
- Verifie via eclipse_get_problems severity=all: 0, eclipse_build: 0w/0e, mvn -o clean verify -DskipTests SUCCESS